--- a/package.json
+++ b/package.json
@@ -9,14 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.4",
+    "@react-native-ml-kit/text-recognition": "^1.2.1",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.9",
+    "expo-camera": "~13.1.0",
+    "expo-image-picker": "^14.0.2",
+    "expo-media-library": "^15.0.0",
+    "expo-module-scripts": "^3.0.4",
+    "expo-sharing": "^11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.1.0",
+    "react-native": "0.70.5",
+    "react-native-camera-kit": "^13.0.0",
+    "react-native-permissions": "^3.6.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-tesseract-ocr": "^2.0.3",
+    "react-native-text-recognition": "^1.0.0",
+    "react-native-web": "^0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
+  },
+  "overrides": {
+    "react": "18.1.0"
   },
   "private": true
 }
